updates to SoundCloud button on radio.

--- a/css/aecss.css
+++ b/css/aecss.css
@@ -221,7 +221,7 @@ a:hover {
     top: 69.3%;
     left: 45.7%;
     width: 8vw;
-    height: 4.2vh;
+    height: 8vw;
     z-index: 100;
     cursor: pointer;
 }
