--- a/css/aecss.css
+++ b/css/aecss.css
@@ -8,8 +8,8 @@ body {
     background-attachment: scroll;
     color: rgb(250, 250, 225);
     font: 11pt Century Gothic, Sans-Serif;
-    overflow-x: auto;
-    overflow-y: hidden;
+    overflow-x: hidden;
+    overflow-y: visible;
 }
 
 header, nav, aside, article, footer {
@@ -36,7 +36,6 @@ a:hover {
     padding: 0;
     margin: 0;
     width: 100%;
-    height: 115vh;
     max-width: 100vw !important;
     min-width: auto;
 }
@@ -148,6 +147,7 @@ a:hover {
     width: 100%;
     max-width: none;
     position: relative;
+    top
     right: 0;
     top: 8vh;
     padding: 0;
@@ -158,6 +158,7 @@ a:hover {
 #enigmaRadioMobile {
     display: initial;
     width: 100%;
+    margin-bottom: 0;
 }
 
 /*STYLING FOR RADIO LINKS*/
@@ -167,7 +168,7 @@ a:hover {
     border-radius: 50%;
     width: 8vw;
     height: 8vw;
-    z-index: 100;
+    z-index: 90;
     cursor: pointer;
 }
 
@@ -222,7 +223,7 @@ a:hover {
     left: 45.7%;
     width: 8vw;
     height: 8vw;
-    z-index: 100;
+    z-index: 90;
     cursor: pointer;
 }
 
@@ -266,11 +267,11 @@ footer {
     width: 100%;
     text-align: center;
     position: relative;
-    bottom: -2%;
-    z-index: 100;
-    background: linear-gradient(to top, black 60%, transparent);
+    z-index: 500 !important;
+    background: linear-gradient(to top, black 80%, transparent);
     font-size: 0.7rem;
     line-height: 0.7rem;
+    margin-top: 0;
     padding-top: 7vh;
     padding-bottom: 1vh;
 }
