fixes to footer and radio position across all views.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -146,7 +146,7 @@
     #radio{
         max-width: 850px;
         right: 20.8%;
-        top: -11%;
+        top: -10vh;
     }
 
     /*DESKTOP*/
@@ -220,13 +220,16 @@
     /*---------------------------------------------------------FOOTER-----------------------------------------------------------*/
 
     footer {
+        height: 6.5vh;
         position: fixed;
         bottom: 0;
+        padding-top: 3%;
         padding-bottom: 2%;
     }
 
     footer img {
-        width: 3.5%;
+        margin: 1% 0.25%;
+        width: 2%;
     }
 }
 
@@ -264,7 +267,21 @@
     /*--------------------------------------------------------RADIO-------------------------------------------------------------*/
     #radio{
         max-width: 1150px;
-        top: -12%;
+        top: -12vh;
+    }
+    /*---------------------------------------------------------FOOTER-----------------------------------------------------------*/
+
+    footer {
+        height: 6vh;
+        position: fixed;
+        bottom: 0;
+        padding-top: 2.5%;
+        padding-bottom: 2%;
+    }
+
+    footer img {
+        margin: 1% 0.25%;
+        width: 2%;
     }
 } 
 
@@ -306,7 +323,20 @@
 
     /*--------------------------------------------------------RADIO-------------------------------------------------------------*/
     #radio{
-        top: -7.25%;
+        top: -7.25vh;
+    }
+    
+    /*---------------------------------------------------------FOOTER-----------------------------------------------------------*/
+
+    footer {
+        height: 6vh;
+        padding-top: 3%;
+        padding-bottom: 2%;
+    }
+
+    footer img {
+        margin: 1% 0.4%;
+        width: 2.5%;
     }
 }
 
@@ -354,17 +384,18 @@
     #radio{
         max-width: 1100px;
         right: 10%;
-        top: -12.5%;
+        top: -12.5vh;
     }
 
     /*---------------------------------------------------------FOOTER-----------------------------------------------------------*/
 
     footer {
-        bottom: -1%;
+        height: 5.5vh;
+        padding-top: 1.5%
     }
 
     footer img {
-        width: 3%;
+        width: 2%;
     }
 }
 
@@ -411,6 +442,6 @@
     /*---------------------------------------------------------FOOTER-----------------------------------------------------------*/
 
     footer {
-        bottom: -1%;
+        height: 5vh;  
     }
 }
