--- a/css/aecss.css
+++ b/css/aecss.css
@@ -62,7 +62,7 @@ a:hover {
     position: absolute;
     background-image: url(../img/blankBio.png);
     background-size: contain;
-    color: slategray;
+    color: darkslategray;
     top: 0;
     z-index: 100;
     margin: 0 0.5%;
@@ -71,7 +71,7 @@ a:hover {
 }
 
 #bio a {
-    color: slategray;
+    color: darkslategray;
     text-decoration: none;
 }
 
