--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,10 @@
-/*-----------------------------------------------------------------------------------------------------------SMALL DESKTOPS---------------------------------------------------------------------------------------------------------*/
+/*-------------------------------------------------------------------------------------------------------------DESKTOPS-------------------------------------------------------------------------------------------------------------*/
+
+/*-------------------------------------------------------------SMALL DESKTOPS-----------------------------------------------------------*/
+
 
 @media screen and (min-width: 750px) and (orientation: landscape) {
-    /*---------------------------------------------------------GENERAL----------------------------------------------------------*/
+    /*-----------------GENERAL--------------*/
 
     /*Styling for body: no overflow, wallpaper background, sets font styling (family, color, size)*/
 
@@ -9,11 +12,13 @@
         overflow: hidden;
     }
 
-    /*--------------------------------------------------------CONTAINERS--------------------------------------------------------*/
+    /*--------------CONTAINERS--------------*/
 
     .wrapper {
+        position: relative;
         max-width: 1325px;
         min-width: 900px;
+        overflow: hidden;
     }
 
     #bannerArea {
@@ -22,13 +27,13 @@
         max-width: 600px;
     }
 
-    /*---------------------------------------------------------BANNER-----------------------------------------------------------*/
+    /*----------------BANNER----------------*/
 
     #arsWoodenBanner {
         width: 100%;
     }
 
-    /*----------------------------------------------------------SMOKE-----------------------------------------------------------*/
+    /*-----------------SMOKE----------------*/
 
     .smokeRight, .smokeRight2a, .smokeRight2b, .smokeRight2c, .smokeRight3, .smokeRight4, .smokeLeftA, .smokeLeftB, .smokeLeftC, .smokeLeftD {
     display: initial;
@@ -117,7 +122,7 @@
         width: 70%;
     }
 
-    /*-----------------------------------------------------------BIO------------------------------------------------------------*/
+    /*-----------------BIO------------------*/
 
     /*STYLING FOR BIO IMAGE*/
 
@@ -142,7 +147,7 @@
         padding: 15px;
     }
 
-    /*--------------------------------------------------------RADIO-------------------------------------------------------------*/
+    /*-----------------RADIO----------------*/
     #radio{
         max-width: 850px;
         right: 20.8%;
@@ -201,7 +206,7 @@
         height: 2.84%;
     }
     
-    /*----------------------------------------------------JS DISABLED NOTICE----------------------------------------------------*/
+    /*-----------JS DISABLED NOTICE---------*/
     .jsDisabled {
         width: 57%;
         min-height: 50vh;
@@ -217,7 +222,7 @@
         padding: 17vh 6vh 0;
     }
 
-    /*---------------------------------------------------------FOOTER-----------------------------------------------------------*/
+    /*----------------FOOTER----------------*/
 
     footer {
         height: 6.5vh;
@@ -234,85 +239,12 @@
 }
 
 
-
-/*-------------------------------------------------------------------------------------------------------TABLETS IN LANDSCAPE-------------------------------------------------------------------------------------------------------*/
-
+/*-----------------------------------------------------------MEDIUM DESKTOPS------------------------------------------------------------*/
 
 
-@media screen and (min-width: 1000px) and (orientation: landscape) {
+@media screen and (min-width: 1300px) and (max-height: 760px) and (orientation: landscape) {
 
-    /*--------------------------------------------------------CONTAINERS--------------------------------------------------------*/
-
-    .wrapper {
-        max-width: 1500px;
-        min-width: 1100px;
-    }
-
-    /*-----------------------------------------------------------BIO------------------------------------------------------------*/
-
-    /*STYLING FOR BIO IMAGE*/
-
-    #bio {
-        width: 99%;
-        min-height: 20vh;
-    }
-
-    /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
-
-    .backButton {
-        width: 25%;
-        margin: 0 37.5%;
-    }
-
-    /*--------------------------------------------------------RADIO-------------------------------------------------------------*/
-    #radio{
-        max-width: 1150px;
-        top: -12vh;
-    }
-    /*---------------------------------------------------------FOOTER-----------------------------------------------------------*/
-
-    footer {
-        height: 6vh;
-        position: fixed;
-        bottom: 0;
-        padding-top: 2.5%;
-        padding-bottom: 2%;
-    }
-
-    footer img {
-        margin: 1% 0.25%;
-        width: 2%;
-    }
-} 
-
-
-
-/*-------------------------------------------------------------------------------------------------------TABLETS IN PORTRAIT--------------------------------------------------------------------------------------------------------*/
-
-
-
-@media screen and (min-width: 750px) and (orientation: portrait) {
-    
-} 
-
-
-
-
-/*-----------------------------------------------------------------------------------------------MEDIUM & LARGE TABLETS IN LANDSCAPE------------------------------------------------------------------------------------------------*/
-
-
-
-
-@media screen and (min-width: 1100px) and (min-height: 800px) and (orientation: landscape) {
-
-    /*-----------------------------------------------------------BIO------------------------------------------------------------*/
-
-    /*STYLING FOR BIO IMAGE*/
-
-    #bio {
-        width: 100%;
-        min-height: 18vh;
-    }
+    /*-----------------BIO------------------*/
 
     /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
 
@@ -321,73 +253,14 @@
         margin: 0 42.5%;
     }
 
-    /*--------------------------------------------------------RADIO-------------------------------------------------------------*/
-    #radio{
-        top: -7.25vh;
-    }
-    
-    /*---------------------------------------------------------FOOTER-----------------------------------------------------------*/
-
-    footer {
-        height: 6vh;
-        padding-top: 3%;
-        padding-bottom: 2%;
-    }
-
-    footer img {
-        margin: 1% 0.4%;
-        width: 2.5%;
-    }
-}
-
-
-
-
-/*-----------------------------------------------------------------------------------------------------LARGE TABLETS IN LANDSCAPE---------------------------------------------------------------------------------------------------*/
-
-
-
-
-@media screen and (min-width: 1100px) and (min-height: 800px) and (orientation: landscape) {
-    /*--------------------------------------------------------RADIO-------------------------------------------------------------*/
-    #radio{
-        max-width: 1370px;
-    }
-
-    /*---------------------------------------------------------FOOTER-----------------------------------------------------------*/
-
-    footer {
-        font-size: 1rem;
-    }
-}
-
-
-
-
-/*---------------------------------------------------------------------------------------------------------MEDIUM DESKTOPS----------------------------------------------------------------------------------------------------------*/
-
-
-
-
-@media screen and (min-width: 1300px) and (max-height: 800px) and (orientation: landscape) {
-
-    /*-----------------------------------------------------------BIO------------------------------------------------------------*/
-
-    /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
-
-    .backButton {
-        width: 15%;
-        margin: 0 42.5%;
-    }
-
-    /*--------------------------------------------------------RADIO-------------------------------------------------------------*/
+    /*----------------RADIO-----------------*/
     #radio{
         max-width: 1100px;
         right: 10%;
         top: -12.5vh;
     }
 
-    /*---------------------------------------------------------FOOTER-----------------------------------------------------------*/
+    /*----------------FOOTER----------------*/
 
     footer {
         height: 5.5vh;
@@ -400,22 +273,19 @@
 }
 
 
-
-/*-----------------------------------------------------------------------------------------------------------LARGE DESKTOPS---------------------------------------------------------------------------------------------------------*/
-
-
+/*-------------------------------------------------------------LARGE DESKTOPS-----------------------------------------------------------*/
 
 
 @media screen and (min-width: 1900px) and (orientation: landscape) {
 
-    /*--------------------------------------------------------CONTAINERS--------------------------------------------------------*/
+    /*--------------CONTAINERS--------------*/
 
     .wrapper {
         max-width: 1700px;
         min-width: 900px;
     }
 
-    /*-----------------------------------------------------------BIO------------------------------------------------------------*/
+    /*-----------------BIO------------------*/
 
     /*STYLING FOR BIO IMAGE*/
 
@@ -432,16 +302,265 @@
         margin: 0 45%;
     }
 
-    /*--------------------------------------------------------RADIO-------------------------------------------------------------*/
+    /*----------------RADIO-----------------*/
     #radio{
         max-width: 1600px;
         right: 10%;
         top: -9%;
     }
 
-    /*---------------------------------------------------------FOOTER-----------------------------------------------------------*/
+    /*----------------FOOTER----------------*/
 
     footer {
         height: 5vh;  
+    }
+}
+
+
+/*--------------------------------------------------------------------------------------------------------------TABLETS-------------------------------------------------------------------------------------------------------------*/
+
+/*---------------------------------------------------------TABLETS IN LANDSCAPE---------------------------------------------------------*/
+
+
+@media screen and (min-width: 1020px) and (min-height: 760px) and (orientation: landscape) {
+    /*-----------------GENERAL--------------*/
+
+    /*Styling for body: no overflow, wallpaper background, sets font styling (family, color, size)*/
+
+    body {
+        overflow: hidden;
+    }
+
+    /*--------------CONTAINERS--------------*/
+
+    .wrapper {
+        position: relative;
+        max-width: 1325px;
+        min-width: 900px;
+        overflow: hidden;
+    }
+
+    #bannerArea {
+        width: 50%;
+        min-width: 450px;
+        max-width: 600px;
+    }
+
+    /*----------------BANNER----------------*/
+
+    #arsWoodenBanner {
+        width: 100%;
+    }
+
+    /*-----------------SMOKE----------------*/
+
+    .smokeRight, .smokeRight2a, .smokeRight2b, .smokeRight2c, .smokeRight3, .smokeRight4, .smokeLeftA, .smokeLeftB, .smokeLeftC, .smokeLeftD {
+    display: initial;
+}
+    
+    .smokeRight {
+        width: 60%;
+        position: absolute;
+        right: -10%;
+        top: -20%;
+        z-index: 80;
+    }
+
+    .smokeRight2a {
+        width: 60%;
+        position: absolute;
+        right: -10%;
+        top: -20%;
+        z-index: 81;
+    }
+
+    .smokeRight2b {
+        width: 60%;
+        position: absolute;
+        right: -20%;
+        top: -20%;
+        z-index: 91;
+    }
+
+    .smokeRight2c {
+        width: 60%;
+        position: absolute;
+        right: -15%;
+        top: -15%;
+        z-index: 98;
+    }
+
+    .smokeRight3 {
+        width: 60%;
+        position: absolute;
+        right: -5%;
+        bottom: 0%;
+        z-index: 99;
+    }
+    .smokeRight4 {
+        width: 60%;
+        position: absolute;
+        right: -10%;
+        bottom: -15%;
+        z-index: 99;
+    }
+
+    .smokeLeftA {
+        width: 60%;
+        position: absolute;
+        left: -8%;
+        bottom: -8%;
+        z-index: 96;
+        width: 70%;
+    }
+
+    .smokeLeftB {
+        width: 60%;
+        position: absolute;
+        left: -8%;
+        bottom: -8%;
+        z-index: 97;
+        width: 70%;
+    }
+
+    .smokeLeftC {
+        width: 60%;
+        position: absolute;
+        left: 0;
+        bottom: -20%;
+        z-index: 98;
+        width: 70%;
+    }
+
+    .smokeLeftD {
+        width: 60%;
+        position: absolute;
+        left: -21%;
+        bottom: 0;
+        z-index: 99;
+        width: 70%;
+    }
+
+    /*-----------------BIO------------------*/
+
+    /*STYLING FOR BIO IMAGE*/
+
+    #bio {
+        width: 100%;
+        min-height: 30vh;
+        position: absolute;
+    }
+
+    #bio div {
+        width: 100%;
+        position: absolute;
+        text-align: center;
+        bottom: 15%;
+    }
+
+    /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
+
+    .backButton {
+        width: 30%;
+        margin: 0 35%;
+        padding: 15px;
+    }
+
+    /*-----------------RADIO----------------*/
+    #radio{
+        max-width: 1174px;
+        right: 20.8%;
+        top: -10vh;
+    }
+    
+    /*-----------JS DISABLED NOTICE---------*/
+    .jsDisabled {
+        width: 50%;
+        min-height: 50vh;
+        position: absolute;
+        background-image: url(../img/blankNotice-cutout.png);
+        background-size: cover;
+        color: slategray;
+        font-size: 3vh;
+        top: 15vh;
+        left: 40%;
+        z-index: 100;
+        margin: 1.25%;
+        padding: 17vh 6vh 0;
+    }
+
+    /*----------------FOOTER----------------*/
+
+    footer {
+        height: 6.5vh;
+        position: fixed;
+        bottom: 0;
+        padding-top: 3%;
+        padding-bottom: 2%;
+    }
+
+    footer img {
+        margin: 1% 0.25%;
+        width: 2%;
+    }
+}
+}
+
+
+/*-------------------------------------------------MEDIUM & LARGE TABLETS IN LANDSCAPE--------------------------------------------------*/
+
+
+@media screen and (min-width: 1100px) and (min-height: 800px) and (orientation: landscape) {
+
+    /*-----------------BIO------------------*/
+
+    /*STYLING FOR BIO IMAGE*/
+
+    #bio {
+        width: 100%;
+        min-height: 18vh;
+    }
+
+    /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
+
+    .backButton {
+        width: 15%;
+        margin: 0 42.5%;
+    }
+
+    /*----------------RADIO-----------------*/
+    #radio{
+        top: -7.25vh;
+    }
+    
+    /*----------------FOOTER----------------*/
+
+    footer {
+        height: 6vh;
+        padding-top: 3%;
+        padding-bottom: 2%;
+    }
+
+    footer img {
+        margin: 1% 0.4%;
+        width: 2.5%;
+    }
+}
+
+
+/*-------------------------------------------------------LARGE TABLETS IN LANDSCAPE-----------------------------------------------------*/
+
+
+@media screen and (min-width: 1100px) and (min-height: 800px) and (orientation: landscape) {
+    
+    /*----------------RADIO-----------------*/
+    #radio{
+        max-width: 1370px;
+    }
+
+    /*----------------FOOTER----------------*/
+
+    footer {
+        font-size: 1rem;
     }
 }
