--- a/css/aecss.css
+++ b/css/aecss.css
@@ -29,11 +29,21 @@ a:hover {
     color: lightgreen;
 }
 
+/*---------RELATIVE POSITION ITEMS----------*/
+
+.wrapper, #radio, footer {
+    position: relative;
+}
+
+/*---------ABSOLUTE POSITION ITEMS----------*/
+#bannerArea, #bio, #bioScreenReader, #bioScreenReader a, .bioButton, .songButton, #soundCloudRadioDial, .jsDisabled, .smokeRight, .smokeRight2a, .smokeRight2b, .smokeRight2c, .smokeRight3, .smokeRight4, .smokeLeftA, .smokeLeftB, .smokeLeftC, .smokeLeftD {
+    position: absolute; 
+}
+
 
 /*-------------------------------------------------------------CONTAINERS---------------------------------------------------------------*/
 
 .wrapper {
-    position: relative;
     padding: 0;
     margin: 0;
     width: 100%;
@@ -45,7 +55,6 @@ a:hover {
     width: 100%;
     max-width: 100vw !important;
     min-width: 90vw;
-    position: absolute; 
     left: 0;
     z-index: 0;
 }
@@ -60,7 +69,6 @@ a:hover {
 #bio {
     width: 98%;
     min-height: 35vh;
-    position: absolute;
     background-image: url(../img/blankBio.png);
     background-size: contain;
     color: darkslategray;
@@ -69,6 +77,10 @@ a:hover {
     margin: 0 0.5%;
     padding: 5px;
     display: none;
+}
+
+#bio p {
+    margin-bottom: 5px;
 }
 
 #bio a {
@@ -80,7 +92,6 @@ a:hover {
 
 #bioScreenReader, #bioScreenReader a {
     width: 1px;
-    position: absolute;
     right: 25%;
     clip: rect(0 0 0 0);
     overflow: hidden;
@@ -90,9 +101,8 @@ a:hover {
 /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
 
 .bioButton {
-    position: absolute;
-    left: 9.5vw;
-    top: -2.5vw;
+    left: 9.7vw;
+    top: -2.6vw;
     padding: 0;
     background-color: transparent;
     border: transparent;
@@ -146,9 +156,8 @@ a:hover {
 #radio{
     width: 100%;
     max-width: none;
-    position: relative;
     right: 0;
-    top: 8vh;
+    top: 2vh;
     padding: 0;
 }
 #enigmaRadioDesktop {
@@ -163,7 +172,6 @@ a:hover {
 /*STYLING FOR RADIO LINKS*/
 
 .songButton {
-    position: absolute;
     border-radius: 50%;
     width: 8vw;
     height: 8vw;
@@ -212,7 +220,6 @@ a:hover {
 }
 
 #soundCloudRadioDial {
-    position: absolute;
     background-color: transparent;
     border-radius: 50%;
     padding: 1.25% 1.25% 1.5%;
@@ -239,7 +246,6 @@ a:hover {
 .jsDisabled {
     width: 94%;
     min-height: 50vh;
-    position: absolute;
     background-image: url(../img/blankNotice-cutout.png);
     background-size: cover;
     color: slategray;
@@ -265,7 +271,6 @@ a:hover {
 footer {
     width: 100%;
     text-align: center;
-    position: relative;
     z-index: 500 !important;
     background: linear-gradient(to top, black 80%, transparent);
     font-size: 0.7rem;
