removed css from responsive.css that wasn't working and saved it to a new css file named tablet.css, streamlined responsive.css further, streamlined aecss.css, further adjustments to question mark button in banner.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -109,9 +109,9 @@
     }
     
     .bioButton {
-        left: 4.9vw;
-        top: -1.2vw;
-        width: 10.3%;
+        left: 5.1vw;
+        top: -2vw;
+        width: 11%;
     }
 
     /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
@@ -144,7 +144,6 @@
     /*STYLING FOR RADIO LINKS*/
 
     .songButton {
-        position: absolute;
         border-radius: 50%;
         width: 2.4%;
         height: 2.84%;
@@ -214,18 +213,18 @@
 }
 
 
-/*-----------------------------------------------------------MEDIUM DESKTOPS------------------------------------------------------------*/
+/*------------------------------------------------MEDIUM DESKTOPS & TABLETS IN LANDSCAPE------------------------------------------------*/
 
 
-@media screen and (min-width: 1300px) and (max-height: 760px) and (orientation: landscape) {
+@media screen and (min-width: 1000px) and (orientation: landscape) {
 
     /*-----------------BIO------------------*/
 
     /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
     
     .bioButton {
-        left: 4.85vw;
-        top: -1.4vw;
+        left: 4.4vw;
+        top: -1.57vw;
     }
 
     .backButton {
@@ -236,8 +235,7 @@
     /*----------------RADIO-----------------*/
     #radio{
         max-width: 1100px;
-        right: 10%;
-        top: -12.5vh;
+        top: -6.5vh;
     }
 
     /*----------------FOOTER----------------*/
@@ -253,7 +251,46 @@
 }
 
 
-/*-------------------------------------------------------------LARGE DESKTOPS-----------------------------------------------------------*/
+/*------------------------------------------------------------LARGER DESKTOPS-----------------------------------------------------------*/
+
+
+@media screen and (min-width: 1300px) and (max-height: 900px) and (orientation: landscape) {
+
+    /*-----------------BIO------------------*/
+
+    /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
+    
+    .bioButton {
+        top: -1.55vw;
+        left: 4.45vw;
+    }
+
+    .backButton {
+        width: 15%;
+        margin: 0 42.5%;
+    }
+
+    /*----------------RADIO-----------------*/
+    #radio{
+        max-width: 1200px;
+        top: -6.95vw;
+        left: -12vw;
+    }
+
+    /*----------------FOOTER----------------*/
+
+    footer {
+        height: 5.5vh;
+        padding-top: 1.5%
+    }
+
+    footer img {
+        width: 2%;
+    }
+}
+
+
+/*-----------------------------------------------------------LARGEST DESKTOPS-----------------------------------------------------------*/
 
 
 @media screen and (min-width: 1900px) and (orientation: landscape) {
@@ -276,11 +313,7 @@
     }
 
     /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
-    
-    .bioButton {
-        left: 4.85vw;
-        top: -1.4vw;
-    }
+
 
     .backButton {
         width: 10%;
@@ -304,150 +337,6 @@
 
 
 /*--------------------------------------------------------------------------------------------------------------TABLETS-------------------------------------------------------------------------------------------------------------*/
-
-/*---------------------------------------------------------TABLETS IN LANDSCAPE---------------------------------------------------------*/
-
-
-@media screen and (min-width: 1020px) and (min-height: 760px) and (orientation: landscape) {
-    /*-----------------GENERAL--------------*/
-
-    /*Styling for body: no overflow, wallpaper background, sets font styling (family, color, size)*/
-
-    body {
-        overflow: hidden;
-    }
-
-    /*--------------CONTAINERS--------------*/
-
-    .wrapper {
-        position: relative;
-        max-width: 1325px;
-        min-width: 900px;
-        overflow: hidden;
-    }
-
-    #bannerArea {
-        width: 50%;
-        min-width: 450px;
-        max-width: 600px;
-    }
-
-    /*----------------BANNER----------------*/
-
-    #arsWoodenBanner {
-        width: 100%;
-    }
-
-    /*-----------------BIO------------------*/
-
-    /*STYLING FOR BIO IMAGE*/
-
-    #bio {
-        width: 100%;
-        min-height: 30vh;
-    }
-
-    #bio div {
-        width: 100%;
-        position: absolute;
-        text-align: center;
-        bottom: 15%;
-    }
-
-    /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
-    
-    .bioButton {
-        left: 4.85vw;
-        top: -1.4vw;
-    }
-
-    .backButton {
-        width: 30%;
-        margin: 0 35%;
-        padding: 15px;
-    }
-
-    /*-----------------RADIO----------------*/
-    #radio{
-        max-width: 1174px;
-        right: 14%;
-        top: -2vh;
-    }
-    
-    /*-----------JS DISABLED NOTICE---------*/
-    .jsDisabled {
-        width: 50%;
-        min-height: 50vh;
-        position: absolute;
-        background-image: url(../img/blankNotice-cutout.png);
-        background-size: cover;
-        color: slategray;
-        font-size: 3vh;
-        top: 15vh;
-        left: 40%;
-        z-index: 100;
-        margin: 1.25%;
-        padding: 17vh 6vh 0;
-    }
-
-    /*----------------FOOTER----------------*/
-
-    footer {
-        height: 6.5vh;
-        position: fixed;
-        bottom: 0;
-        padding-top: 3%;
-        padding-bottom: 2%;
-    }
-
-    footer img {
-        margin: 1% 0.25%;
-        width: 2%;
-    }
-}
-}
-
-
-/*-------------------------------------------------MEDIUM & LARGE TABLETS IN LANDSCAPE--------------------------------------------------*/
-
-
-@media screen and (min-width: 1100px) and (min-height: 800px) and (orientation: landscape) {
-
-    /*-----------------BIO------------------*/
-
-    /*STYLING FOR BIO IMAGE*/
-
-    #bio {
-        width: 100%;
-        min-height: 18vh;
-    }
-
-    /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
-
-    .backButton {
-        width: 15%;
-        margin: 0 42.5%;
-    }
-
-    /*----------------RADIO-----------------*/
-    #radio{
-        top: -7.25vh;
-    }
-    
-    /*----------------FOOTER----------------*/
-
-    footer {
-        height: 6vh;
-        padding-top: 3%;
-        padding-bottom: 2%;
-    }
-
-    footer img {
-        margin: 1% 0.4%;
-        width: 2.5%;
-    }
-}
-
 
 /*-------------------------------------------------------LARGE TABLETS IN LANDSCAPE-----------------------------------------------------*/
 
