--- a/css/aecss.css
+++ b/css/aecss.css
@@ -36,7 +36,7 @@ a:hover {
 }
 
 /*---------ABSOLUTE POSITION ITEMS----------*/
-#bannerArea, #bio, #bioScreenReader, #bioScreenReader a, .bioButton, .songButton, #soundCloudRadioDial, .jsDisabled, .smokeRight, .smokeRight2a, .smokeRight2b, .smokeRight2c, .smokeRight3, .smokeRight4, .smokeLeftA, .smokeLeftB, .smokeLeftC, .smokeLeftD {
+#bannerArea, #bio, #bioScreenReader, #bioScreenReader a, .bioButton,.hints, .songButton, #soundCloudRadioDial, .jsDisabled, .smokeRight, .smokeRight2a, .smokeRight2b, .smokeRight2c, .smokeRight3, .smokeRight4, .smokeLeftA, .smokeLeftB, .smokeLeftC, .smokeLeftD {
     position: absolute; 
 }
 
@@ -51,6 +51,7 @@ a:hover {
     min-width: auto;
 }
 
+/*--------------BANNER AREA-----------------*/
 #bannerArea {
     width: 100%;
     max-width: 100vw !important;
@@ -62,10 +63,7 @@ a:hover {
     max-width: 100vw;
 }
 
-/*-----------------------------------------------------------------BIO------------------------------------------------------------------*/
-
-/*----------STYLING FOR BIO IMAGE-----------*/
-
+/*-------------------BIO--------------------*/
 #bio {
     width: 98%;
     min-height: 35vh;
@@ -79,6 +77,50 @@ a:hover {
     display: none;
 }
 
+/*--------------HINT MESSAGE----------------*/
+.hints {
+    background-image: url(../img/blankNotice-cutout.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    width: 90%;
+    z-index: 200;
+    color: darkslategray;
+    top: 40vh;
+    margin: 0;
+    font-size: 2rem;
+    font-weight: 500;
+    padding: 5%;
+    display: none;
+}
+
+/*------------------RADIO-------------------*/
+#radio{
+    width: 100%;
+    max-width: none;
+    right: 0;
+    top: 2vh;
+    padding: 0;
+}
+
+/*------------JSDISABLED NOTICE-------------*/
+.jsDisabled {
+    width: 94%;
+    min-height: 50vh;
+    background-image: url(../img/blankNotice-cutout.png);
+    background-size: cover;
+    color: slategray;
+    font-size: 3vh;
+    top: 5vh;
+    left: 0;
+    z-index: 100;
+    margin: 1.25%;
+    padding: 7vh 1vh 0;
+}
+
+/*-----------------------------------------------------------------BIO------------------------------------------------------------------*/
+
+/*-------------STYLING FOR BIO--------------*/
+
 #bio p {
     margin-bottom: 5px;
 }
@@ -88,7 +130,7 @@ a:hover {
     text-decoration: none;
 }
 
-/*STYLING FOR SCREENREADER BIO*/
+/*-------STYLING FOR SCREENREADER BIO-------*/
 
 #bioScreenReader, #bioScreenReader a {
     width: 1px;
@@ -153,13 +195,7 @@ a:hover {
 }
 
 /*----------------------------------------------------------------RADIO-----------------------------------------------------------------*/
-#radio{
-    width: 100%;
-    max-width: none;
-    right: 0;
-    top: 2vh;
-    padding: 0;
-}
+
 #enigmaRadioDesktop {
     display: none;
 }
@@ -169,7 +205,7 @@ a:hover {
     margin-bottom: 0;
 }
 
-/*STYLING FOR RADIO LINKS*/
+/*----------STYLING FOR RADIO LINKS---------*/
 
 .songButton {
     border-radius: 50%;
@@ -243,19 +279,7 @@ a:hover {
 }
 
 /*----------------------------------------------------------JS DISABLED NOTICE----------------------------------------------------------*/
-.jsDisabled {
-    width: 94%;
-    min-height: 50vh;
-    background-image: url(../img/blankNotice-cutout.png);
-    background-size: cover;
-    color: slategray;
-    font-size: 3vh;
-    top: 5vh;
-    left: 0;
-    z-index: 100;
-    margin: 1.25%;
-    padding: 7vh 1vh 0;
-}
+
 .jsDisabled p {
     margin: 0;
 }
