--- a/css/responsive.css
+++ b/css/responsive.css
@@ -90,6 +90,15 @@
         left: -21%;
         bottom: 0;
     }
+    
+    /*-----------HINT MESSAGE---------------*/
+    .hints {
+        width: 50%;
+        margin: 0 25%;
+        top: 30vh;
+        font-size: 1.5rem;
+        padding: 5%;
+    }
 
     /*-----------------BIO------------------*/
 
