condensed all smoke right into one image and all smoke left into one image instead of having six separate images to help speed up load time.

--- a/css/aecss.css
+++ b/css/aecss.css
@@ -286,7 +286,7 @@ a:hover {
 
 /*-----------------------------------------------------------------SMOKE----------------------------------------------------------------*/
 
-.smokeRight, .smokeRight2a, .smokeRight2b, .smokeRight2c, .smokeRight3, .smokeRight4, .smokeLeftA, .smokeLeftB, .smokeLeftC, .smokeLeftD {
+.smokeRight, .smokeLeftA {
     display: none;
 }
 
