--- a/css/aecss.css
+++ b/css/aecss.css
@@ -143,13 +143,14 @@ a:hover {
 /*STYLING FOR BIO BUTTON ON BANNER AND GO BACK BUTTON ON BIO*/
 
 .bioButton {
-    left: 9.7vw;
-    top: -2.45vw;
+    left: 8vw;
+    top: -2.15vw;
     padding: 0;
+    margin: 0;
     background-color: transparent;
     border: transparent;
     border-radius: 50px;
-    width: 20.3%;
+    width: 17vw;
     z-index: 99;
     display: none;
 }
